--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common (0.3.0-1~trusty) trusty; urgency=medium
+
+  * ignition-common 0.3.0-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Fri, 19 May 2017 18:04:44 +0200
+
 ignition-common (0.2.0-1~trusty) trusty; urgency=medium
 
   * ignition-common 0.2.0-1 release
