--- a/xenial/debian/changelog
+++ b/xenial/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common (0.4.0-1~xenial) xenial; urgency=medium
+
+  * ignition-common 0.4.0-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Tue, 30 May 2017 16:44:33 -0700
+
 ignition-common (0.3.0-1~xenial) xenial; urgency=medium
 
   * ignition-common 0.3.0-1 release
