--- a/debian/stretch/debian/changelog
+++ b/debian/stretch/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.0.0~pre1-2~stretch) stretch; urgency=medium
+
+  * ignition-common3 3.0.0~pre1-2 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Fri, 10 Sep 2018 08:51:57 -0700
+
 ignition-common3 (3.0.0~pre1-1~stretch) stretch; urgency=medium
 
   * ignition-common3 3.0.0~pre1-1 release
