--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.0.0~pre2-1~bionic) bionic; urgency=medium
+
+  * ignition-common3 3.0.0~pre2-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Mon, 05 Nov 2018 14:59:36 -0700
+
 ignition-common3 (3.0.0~pre1-2~bionic) bionic; urgency=medium
 
   * ignition-common3 3.0.0~pre1-2 release
