--- a/debian/stretch/debian/changelog
+++ b/debian/stretch/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.0.0~pre3-1~stretch) stretch; urgency=medium
+
+  * ignition-common3 3.0.0~pre3-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Fri, 11 Jan 2019 12:14:39 -0800
+
 ignition-common3 (3.0.0~pre2-1~stretch) stretch; urgency=medium
 
   * ignition-common3 3.0.0~pre2-1 release
