--- a/debian/sid/debian/changelog
+++ b/debian/sid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.0.0-2~sid) sid; urgency=medium
+
+  * ignition-common3 3.0.0-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Thu, 28 Feb 2019 20:16:06 +0100
+
 ignition-common3 (3.0.0-1~sid) sid; urgency=medium
 
   * ignition-common3 3.0.0-1 release
