--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.1.0-1~bionic) bionic; urgency=medium
+
+  * ignition-common3 3.1.0-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Sat, 18 May 2019 00:15:12 -0700
+
 ignition-common3 (3.1.0~pre1-1~bionic) bionic; urgency=medium
 
   * ignition-common3 3.1.0~pre1-1 release
