--- a/debian/sid/debian/changelog
+++ b/debian/sid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.2.0-1~sid) sid; urgency=medium
+
+  * ignition-common3 3.2.0-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Wed, 07 Aug 2019 19:12:31 -0800
+
 ignition-common3 (3.1.0-1~sid) sid; urgency=medium
 
   * ignition-common3 3.1.0-1 release
