--- a/debian/stretch/debian/changelog
+++ b/debian/stretch/debian/changelog
@@ -1,3 +1,9 @@
+ignition-common3 (3.3.0-1~stretch) stretch; urgency=medium
+
+  * ignition-common3 3.3.0-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Tue, 27 Aug 2019 15:17:20 -0700
+
 ignition-common3 (3.2.0-1~stretch) stretch; urgency=medium
 
   * ignition-common3 3.2.0-1 release
